# handbrake_android

./: .gitattributes  .gitignore  GIT_LFS_SETUP.md
.specstory/history/: 2025-07-31_03-54Z-no-storyboard,-all-ui-in-code.md
android-handbrake/: BUILD_SUCCESS_SUMMARY.md  FULL_FUNCTIONALITY_UPDATE.md  README.md  build-dependencies.sh  build-full.sh  build-minimal.sh  build-missing-deps.sh  build-with-prebuilt.sh  build.gradle  gradle.properties  gradlew  settings.gradle  test-x264-only.sh  test-x265-only.sh
android-handbrake/downloads/ffmpeg-7.1-android-lite/: config-arm64-v8a.txt  config-armeabi-v7a.txt  config-x86.txt  config-x86_64.txt
android-handbrake/downloads/ffmpeg-7.1-android-lite/include/libavutil/: ffversion.h
android-handbrake/downloads/ffmpeg-7.1-android-lite/lib/arm64-v8a/: libavformat.a.bak  libavformat_full.a.mri
android-handbrake/downloads/ffmpeg-7.1-android-lite/lib/arm64-v8a/pkgconfig/: libavcodec.pc  libavformat.pc  libavformat.pc.bak  libswscale.pc  libswscale.pc.bak
android-handbrake/downloads/ffmpeg-7.1-android-lite/lib/armeabi-v7a/: libavformat.a.bak  libavformat_full.a.mri
android-handbrake/downloads/ffmpeg-7.1-android-lite/lib/armeabi-v7a/pkgconfig/: libavcodec.pc.bak  libavformat.pc  libavformat.pc.bak  libswresample.pc
android-handbrake/downloads/ffmpeg-7.1-android-lite/lib/x86/: libavformat.a.bak  libavformat_full.a.mri
android-handbrake/downloads/ffmpeg-7.1-android-lite/lib/x86/pkgconfig/: libavfilter.pc  libavformat.pc  libavformat.pc.bak  libavutil.pc  libswresample.pc.bak
android-handbrake/downloads/ffmpeg-7.1-android-lite/lib/x86_64/: libavformat.a.bak  libavformat_full.a.mri
android-handbrake/downloads/ffmpeg-7.1-android-lite/lib/x86_64/pkgconfig/: libavfilter.pc.bak  libavformat.pc  libavformat.pc.bak  libavutil.pc.bak
android-handbrake/src/main/: AndroidManifest.xml
android-handbrake/src/main/cpp/: CMakeLists-full.txt.backup  CMakeLists-minimal-test.txt  CMakeLists.txt
android-handbrake/src/main/cpp/handbrake-source/: android_stubs.c  common.c  compat.c  decavcodec.c  encavcodec.c  encavcodecaudio.c  encsvtav1.c  encx265.c  stream.c  work.c
android-handbrake/src/main/cpp/handbrake-source/handbrake/: internal.h  project.h
android-handbrake/src/main/cpp/jni/: handbrake_bridge.cpp  handbrake_bridge.h  handbrake_bridge_minimal.cpp  handbrake_jni.cpp
android-handbrake/src/main/cpp/prebuilt/arm64-v8a/include/svt-av1/: EbDebugMacros.h  EbSvtAv1.h
android-handbrake/src/main/cpp/prebuilt/arm64-v8a/lib/: libjansson.la  libmp3lame.la  libogg.la  libopus.la  libtheora.la  libtheoradec.la  libtheoraenc.la  libvorbis.la  libvorbisenc.la  libvorbisfile.la
android-handbrake/src/main/cpp/prebuilt/arm64-v8a/lib/cmake/libjpeg-turbo/: libjpeg-turboTargets.cmake
android-handbrake/src/main/cpp/prebuilt/arm64-v8a/lib/pkgconfig/: SvtAv1Enc.pc  jansson.pc  libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libjpeg.pc  libswresample.pc  libswscale.pc  libturbojpeg.pc  ogg.pc  opus.pc  theora.pc  theoradec.pc  theoraenc.pc  vorbis.pc  vorbisenc.pc  vorbisfile.pc  x264.pc  x265.pc  zlib.pc
android-handbrake/src/main/cpp/prebuilt/arm64-v8a/share/doc/libtheora/html/: annotated.html  classes.html  codec_8h.html  codec_8h_source.html  dir_0f91760d62c578de767c41a0aaae5482.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.css  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  group__basefuncs.html  group__decfuncs.html  group__encfuncs.html  group__oldfuncs.html  index.html  menudata.js  structth__comment.html  structth__huff__code.html  structth__img__plane.html  structth__info.html  structth__quant__info.html  structth__quant__ranges.html  structth__stripe__callback.html  structtheora__comment.html  structtheora__info.html  structtheora__state.html  structyuv__buffer.html  theora_8h.html  theora_8h_source.html  theoradec_8h.html  theoradec_8h_source.html  theoraenc_8h.html  (+2 more)
android-handbrake/src/main/cpp/prebuilt/arm64-v8a/share/doc/libtheora/latex/: annotated.tex  codec_8h.tex  codec_8h_source.tex  dir_0f91760d62c578de767c41a0aaae5482.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  group__basefuncs.tex  group__decfuncs.tex  group__encfuncs.tex  group__oldfuncs.tex  index.tex  refman.tex  structth__comment.tex  structth__huff__code.tex  structth__img__plane.tex  structth__info.tex  structth__quant__info.tex  structth__quant__ranges.tex  structth__stripe__callback.tex  structtheora__comment.tex  structtheora__info.tex  structtheora__state.tex  structyuv__buffer.tex  theora_8h.tex  theora_8h_source.tex  theoradec_8h.tex  theoradec_8h_source.tex  theoraenc_8h.tex  theoraenc_8h_source.tex  topics.tex
android-handbrake/src/main/cpp/prebuilt/armeabi-v7a/include/: jansson.h  x265.h
android-handbrake/src/main/cpp/prebuilt/x86_64/include/: x264.h
android-handbrake/src/main/java/com/handbrake/core/: HandBrakeCore.java  HandBrakeJob.java
win/CS/HandBrakeWPF/ViewModels/Interfaces/: IAboutViewModel.cs
